Make QJsonObject::iterator a true random access iterator

Amends and fixes 7236721bf8bacc0978fc872d7e4805c7be7824f0
where the iterator category was changed from bidirectional
to random access without adding all the required functions.

Fixes: QTBUG-57353
Change-Id: I2c96448facb222c8b8f9ad4423cb0dbd1ed098f4
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>